--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "This is Namaste React By Mohak Agarwal",
-  "main": "App.js",
   "scripts": {
     "test": "jest"
   },
@@ -19,6 +18,14 @@
     "url": "(https://github.com/agarwalmohak6/namaste-react.git)"
   },
   "devDependencies": {
-    "parcel": "^2.10.1"
-  }
+    "parcel": "^2.10.1",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "browserslist": [
+    "last 2 versions"
+  ]
 }
